<resources>
	<string name="ar_tamatuline1">
	    
<b>الحاج المتمتع</b> \n
أن يحرم بالعمرة من ميقات بلده ويفرغ منها ثم يحرم للحج من مكة\n
وسمي متمتعاً لاستمتاعه بمحظورات الإحرام بين العمرة والحج من الثياب, والطيب, والنساء...\n

والمخطط المنطقي الموجود على يمين الشاشة يوضح مسير الحاج المتمتع خطوة خطوة.\n

قال الله تعالى:\n
(إِنَّ أَوَّلَ بَيْتٍ وُضِعَ لِلنَّاسِ لَلَّذِي بِبَكَّةَ مُبَارَكًا وَهُدًى لِلْعَالَمِينَ * فِيهِ ءَايَاتٌ بَيِّنَاتٌ مَقَامُ إِبْرَاهِيمَ وَمَنْ دَخَلَهُ كَانَ ءَامِنًا وَلِلَّهِ عَلَى النَّاسِ حِجُّ الْبَيْتِ مَنِ اسْتَطَاعَ إِلَيْهِ سَبِيلا وَمَنْ كَفَرَ فَإِنَّ اللَّهَ غَنِيٌّ عَنِ الْعَالَمِينَ)\n
قبل الثامن من ذي الحجة\n
1) الاحرام\n 
2) طواف العمرة  :\n
يستحب في بداية الطواف أن يستقبل الكعبة بحيث يكون الحجر الأسود عن يمينه ثم ينتقل ليستقبل الحجر و ينوي الطواف , يبدأ من خط المرمر البني ويقول:(بسم الله والله أكبر اللهم إيماناً بك وتصديقاً بكتابك ووفاء بعهدك وإتباعاً لسنة  نبيك) والطواف عبارة عن سبعة أشواط \n
3) ركعتا الطواف:\n
بعد الانتهاء من الطواف يصلي ركعتي الطواف خلف مقام سيدنا إبراهيم عليه السلام ولو في آخر الحرم أو في أي مكان في الحرم جائز في حال الزحام.\n 
يقرأ في الأولى قل يا أيها الكافرون.... وفي الثانية قل هو الله آحد....بعد الفاتحة ,يدعو بعد الصلاة: (اللهم إنك دعوت عبادك إلى بيتك, وقد جئت طالباً رحمتك, ومب\n
تغياً رضوانك, وأنت مننت علي بذلك, فاغفر لي, إنك على كل شيء قدير).\n

4) السعي بين الصفا و المروة\n 
يصعد إلى الصفا بحيث يرى الكعبة (إذا أمكن) من باب الصفا ويقول حين الصعود\n
(إِنَّ الصَّفَا وَالْمَرْوَةَ مِنْ شَعَائِرِ اللَّهِ فَمَنْ حَجَّ الْبَيْتَ أَوِ اعْتَمَرَ فَلا جُنَاحَ عَلَيْهِ أَنْ يَطَّوَّفَ بِهِمَا وَمَنْ تَطَوَّعَ خَيْرًا فَإِنَّ اللَّهَ شَاكِرٌ عَلِيم)\n 
ثم يقول:\n
(الله أكبر الله أكبر، الله أكبر و لله الحمد، الله أكبر على ما هدانا والحمد لله على ما أولانا، لا إله إلا الله وحده لا شريك له، له الملك وله الحمد يحيي ويميت، بيده الخير، وهو على كل شيء قدير، لا إله إلا الله وحده، صدق وعده، ونصر عبده، وأعز جنده، و هزم الأحزاب و حده، لا إله إلا الله، ولا نعبد إلا إياه مخلصين له الدين ولو كره الكافرون، اللهم إنك قلت: ادعوني استجب لكم, وإنك لا تخلف الميعاد، وإني أسألك كما هديتني للإسلام أن لا تنزعه مني حتى تتوفاني وأنا مسلم) ثلاث مرات.\n
ثم يصلي على سيدنا محمد (صلى الله عليه وسلم) ويقول عند هبوطه من الصفا في كل شوط:\n
(اللهم إني أسألك موجبات رحمتك وعزائم مغفرتك والسلامة من كل إثم والغنيمة من كل بر والفوز بالجنة والنجاة من النار)\n
يُسن أن يهرول بين الميلين الأخضرين (للرجل فقط).\n
يدعو بين الميلين الأخضرين: (ربنا أتنا في الدنيا حسنة وفي الآخرة حسنة وقنا عذاب النار، رب اغفر وارحم، واعف وتكرم، وتجاوز عما تعلم, إنك أنت الأعز الأكرم، اللهم إني أسألك الهدى والتقى والعفاف والغنى، اللهم اعني على ذكرك وشكرك وحسن عبادتك).\n
 ثم يصل الى المروة فهذا شوط واحد فيتم سبعة أشواط يبدأ أولها بالصفا وينتهي آخرها بالمروة.\n
(إِنَّ الصَّفَا وَالْمَرْوَةَ مِنْ شَعَائِرِ اللَّهِ....)  عندما يقف عند المروة يقول\n 
ويقول نفس الأذكار والدعوات التي قالها عند الصفا.\n
ثم يعود الحاج إلى منى للمبيت فيها من أجل رمي الجمرات الثلاث في الأيام الثلاثة القادمة.\n
5) الحلق و التقصير(التحلل من العمرة للمتمتع)\n
ويكون بحلق الشعر أو بتقصيره قدر الأنملة (2سم) ثم يتحلل من الإحرام ويحل له كل شيء حتى النساء, ما عدا الصيد.\n
6) يبقى غير محرم في مكة حتى الثامن من ذي الحجة\n 
خلال هذه المدة يستغلها الحاج بـ:\n
- كثرة الصلاة في المسجد الحرام (الصلاة بمائة ألف صلاة)\n
- يكثر من الطواف، لأن الطواف للآفاقي أفضل العبادات في المسجد الحرام.\n 
<b>الثامن من ذي الحجة</b>\n 
1)	يحرم للحج من المسجد الحرام ويصلي ركعتي الإحرام ويقول:\n
(اللهم إني أريد الحج فيسره لي وتقبله مني، نويت الحج وأحرمت به لله تعالى فإن حبسني حابس فمحلي حيث حبستني( ويقول لبيك اللهم لبيك... ثلاث مرات، ويختم بالصلاة على سيدنا محمد (صلى الله عليه وسلم)\n
2)	ينطلق إلى منى بعد صلاة الفجر يصلي بها الظهر – العصر – المغرب – العشاء – وفجر اليوم التاسع وعند التوجه إلى مِنى يقول:\n
(اللهم إياك أرجو ولك أدعو فبلغني صالح أملي وأغفر لي وأمنن علي بما مننت به على أهل طاعتك، إنك على كل شيء قدير) وفي مِنى يكثر الحاج من الأذكار والقول:(ربنا آتنا في الدنيا حسنة وفي الآخرة حسنة وقنا عذاب النار)\n
ويسن المكوث والصلاة في مسجد الخيف.\n
<b>التاسع من ذي الحجة</b> \n
الانطلاق إلى عرفات بعد صلاة الفجر ويقول في مسيره:\n
)اللهم إليك توجهت, ووجهَك الكريمَ أردت فاجعل ذنبي مغفوراً وحجي مبرورا,ً وارحمني إنك على كل شيء قدير) ويكثر الحاج من التلبية وقراءة القرآن ومن قول ربنا آتنا في الدنيا حسنة...\n
الوصول إلى عرفات يقف في عرفات , وإذا وقع بصره على جبل الرحمة يسبح الله ويكبره.\n
يسن أن يتوجه إلى مسجد نمرة لسماع الخطبة, ويصلي الظهر والعصر جمع تقديم بوقت الظهر بآذان واحد و بإقامتين مع الإمام العام بدون أن يصلي السنن بينهما, والإكثار من الذكر والدعاء حتى غروب الشمس\n
	    \n
	</string>
	<string name="ar_tamatuline2">
	    
<b>الإفاضة من عرفات إلى مزدلفة بعد الغروب ملبياً ومكبراً ومهللاً وحامداً ويقول:</b>\n
(الله أكبر الله أكبر الله أكبر، لا إله إلا الله والله أكبر، الله أكبر ولله الحمد(\n
و يقول:\n 
(إليك اللهم أرغب, وإياك أرجو, فتقبل نسكي ووفقني, وارزقني فيه من الخير أكثر مما أطلب, ولا تخيبني, إنك أنت الله الجواد الكريم)ويستحب الإكثار من الدعاء والأذكار والتلبية وقراءة ما تيسر من القرآن\n
)فَإِذَا أَفَضْتُمْ مِنْ عَرَفَاتٍ فَاذْكُرُوا اللَّهَ عِنْدَ الْمَشْعَرِ الْحَرَامِ وَاذْكُرُوهُ كَمَا هَدَاكُمْ وَإِنْ كُنْتُمْ مِنْ قَبْلِهِ لَمِنَ الضَّالِّين َ* ثُمَّ أَفِيضُوا مِنْ حَيْثُ أَفَاضَ النَّاسُ وَاسْتَغْفِرُوا اللَّهَ إِنَّ اللَّهَ غَفُورٌ رَحِيم(\n
	    \n
	</string>
	<string name="ar_tamatuline3">
	    
)اللهم إني أسألك فواتح الخير وخواتمه وجوامعه وأوله وآخره وظاهره وباطنه والدرجات العلا في الجنة, وأن تصلح لي شأني كله, وأن تصرف عني الشر كله, فإنه لا يفعل ذلك غيرك, ولا يجود به إلا أنت(\n
ثم يصلي المغرب والعشاء بعد دخول وقت العشاء جمعاً بآذان واحد وإقامة واحدة ويؤخر سنة المغرب والعشاء والوتر إلى مابعد فرض العشاء , ثم يتزود الحاج بالحصيات وعددها 70 حصاة (فوق حجم الحمص و دون البندق) لرمي الجمرات كلها.\n
إذا طلع الفجر يسن أن يصلي الصبح في أول وقتها، ثم يقول:\n
(الله أكبر الله أكبر الله أكبر, لا إله إلا الله و الله أكبر, الله أكبر و لله الحمد) ويصلي على سيدنا محمد (صلى الله عليه وسلم) ويدعو رافعاً يديه إلى السماء.\n
<b>العاشر من ذي الحجة</b>\n 
1)	السير إلى مِنى بعد صلاة الصبح وقبل طلوع الشمس ويبذل جهده في الإكثار من التلبية، ويستحسن أن يقول في مسيره:\n
(اللهم إليك أفضت، ومن عذابك أشفقت، وإليك توجهت، ومنك رهبت، اللهم تقبل نسكي، وأعظم أجري، وارحم تضرعي، واستجب دعوتي) ويصلي على النبي (صلى الله عليه وسلم) فإذا بلغ وادي محسر أسرع بقدر رمية حجر ويقول عند وصوله إلى مِنى:\n 
(الحمد لله الذي بلغنيها سالماً معافى، اللهم هذه مِنى قد أتيتها وأنا عبدك، وفي قبضتك، أسألك أن تمن علي بما مننت به على أوليائك، اللهم إني أعوذ بك من الحرمان والمصيبة في ديني، يا أرحم الراحمين)\n
2)	رمي جمرة العقبة\n 
يرمي الحاج سبع حصيات ويقول عند كل واحدة) :بسم الله، والله أكبر, رغماً للشيطان وحزبه وإرضاءً للرحمن( ويقطع الحاج التلبية بأول الرمي.\n
وقت الرمي من فجر يوم النحر إلى فجر اليوم التالي ولكن السنة أن يكون الرمي ما بين طلوع الشمس إلى الزوال ويجوز الرمي بعد الغروب إلى الفجر لكن مع الكراهة إلا لعذر. رمي الجمرة بحيث تضرب الحصية في شاخص (عمود) الجمرة أو تقع في الدائرة المحيطة به, ويكون الحاج واقفاً مستقبل الجمرة بحيث يجعل مِنى عن يمينه وطرق مكة عن يساره, أما الرمي من فوق الجسر فمن أي جهة كانت.\n 
	    \n
	</string>
	<string name="ar_tamatuline4">
	    
3)	ذبح الهدي:\n
وهي واجبة على المتمتع والقارن فقط، وأصبح في مكة مؤسسات تقوم نيابة عن الحاج في شراء الهدي (الشاة) وذبحه وتوزيعه على الفقراء في مختلف أنحاء العالم، فإن لم يجد لزمه الصوم ثلاثة أيام في الحج قبل يوم عرفة و سبعة إذا رجع إلى أهله.\n

4)	الحلق والتقصير :\n
جب حلق الشعر أو تقصيره قدر الأنملة (2 سم) ويستحب الحلق بشكل كامل وبالموس, والمرأه فقط تقصر قدر انمله. ويستحسن عند الحلق أن يقال: (الحمد لله على ما هدانا، الحمد لله على ما أنعم به علينا، اللهم هذه ناصيتي, فتقبل مني واغفر لي ذنوبي)\n
(اللهم اغفر لي وللمحلقين والمقصرين يا واسع المغفرة ، آمين)\n
وبعد الفراغ من الحلق أو التقصير يقول:\n
)الحمد لله الذي قضى عنا نُسُكَنا(\n
فإذا فعل ذلك يتحلل الحاج التحلل الأصغر, ويحل له كل شيء حرم بالإحرام إلا الجماع و دواعيه, فلا يحل له حتى يطوف طواف الإفاضة.\n
5)	طواف الإفاضة\n
بعد العودة من منى إلى مكة المكرمة يطوف الحاج سبعة أشواط, ويصلي ركعتي الطواف, ويأتي الملتزم وزمزم, ثم يسعى بين الصفا والمروة إذا لم يكن قد سعى من قبل.\n
بعد طواف الإفاضة يتحلل الحاج التحلل الأكبر أي يحل للحاج بعدها كل شيء.\n
	    \n
	</string>
	<string name="ar_tamatuline5">
	    
6) السعي بين الصفا و المروة\n 
يصعد إلى الصفا بحيث يرى الكعبة (إذا أمكن) من باب الصفا ويقول حين الصعود\n
(إِنَّ الصَّفَا وَالْمَرْوَةَ مِنْ شَعَائِرِ اللَّهِ فَمَنْ حَجَّ الْبَيْتَ أَوِ اعْتَمَرَ فَلا جُنَاحَ عَلَيْهِ أَنْ يَطَّوَّفَ بِهِمَا وَمَنْ تَطَوَّعَ خَيْرًا فَإِنَّ اللَّهَ شَاكِرٌ عَلِيم)\n 
ثم يقول:\n
(الله أكبر الله أكبر، الله أكبر و لله الحمد، الله أكبر على ما هدانا والحمد لله على ما أولانا، لا إله إلا الله وحده لا شريك له، له الملك وله الحمد يحيي ويميت، بيده الخير، وهو على كل شيء قدير، لا إله إلا الله وحده، صدق وعده، ونصر عبده، وأعز جنده، و هزم الأحزاب و حده، لا إله إلا الله، ولا نعبد إلا إياه مخلصين له الدين ولو كره الكافرون، اللهم إنك قلت: ادعوني استجب لكم, وإنك لا تخلف الميعاد، وإني أسألك كما هديتني للإسلام أن لا تنزعه مني حتى تتوفاني وأنا مسلم) ثلاث مرات.\n
ثم يصلي على سيدنا محمد (صلى الله عليه وسلم) ويقول عند هبوطه من الصفا في كل شوط:\n
(اللهم إني أسألك موجبات رحمتك وعزائم مغفرتك والسلامة من كل إثم والغنيمة من كل بر والفوز بالجنة والنجاة من النار)\n
يُسن أن يهرول بين الميلين الأخضرين (للرجل فقط).\n
يدعو بين الميلين الأخضرين: (ربنا أتنا في الدنيا حسنة وفي الآخرة حسنة وقنا عذاب النار، رب اغفر وارحم، واعف وتكرم، وتجاوز عما تعلم, إنك أنت الأعز الأكرم، اللهم إني أسألك الهدى والتقى والعفاف والغنى، اللهم اعني على ذكرك وشكرك وحسن عبادتك).\n
 ثم يصل الى المروة فهذا شوط واحد فيتم سبعة أشواط يبدأ أولها بالصفا وينتهي آخرها بالمروة.\n
(إِنَّ الصَّفَا وَالْمَرْوَةَ مِنْ شَعَائِرِ اللَّهِ....)  عندما يقف عند المروة يقول\n 
ويقول نفس الأذكار والدعوات التي قالها عند الصفا.\n
ثم يعود الحاج إلى منى للمبيت فيها من أجل رمي الجمرات الثلاث في الأيام الثلاثة القادمة.\n
	    \n
	</string>
	<string name="ar_tamatuline6">
	    

<b>11- 12 -13 من ذي الحجة</b> \n
يوم  11و 12 ويسمى (أول  وثاني أيام التشريق )\n
في مِنى يرمي الحاج الجمرات الثلاث في هذا اليوم, والسنة أن يبدأ بالجمرة الصغرى, ثم الوسطى, ثم الكبرى (العقبة)، يرمي كل واحدة بسبع حصيات قائلاً مع كل رمية:  (بسم الله، والله أكبر رغماً للشيطان وحزبه وإرضاءً للرحمن)ويدعو بعد كل جمرة ما عدا جمرة العقبة الكبرى، يرفع يديه مستقبلاً الكعبة ويصلي على النبي (صلى الله عليه وسلم) و يدعو بحاجته ويقول:  (اللهم اجعله حجاً مبروراً وذنباً مغفوراً وعملاً صالحاً مقبولاً وتجارة لن تبور) ووقت الرمي من زوال الشمس (وقت الظهر) إلى طلوع فجر اليوم التالي ولكن السنة بين الزوال والغروب.\n
جمرة العقبة تٌرمى بحيث يكون الحاج واقفاً مستقبل الجمرة ويجعل مِنى عن يمينه وطريق مكة عن يساره. أما الرمي من فوق الجسر فمن أي جهة كانت.\n
أما بالنسبة للجمرة الصغرى والوسطى فترمى من جميع الجهات.\n
\n	    
	</string>
	<string name="ar_tamatuline7">
	    
<b>يوم 13 (ثالث أيام التشريق)</b>\n
إذا كان الحاج متأخراً في مِنى إلى ما بعد غروب شمس ثالث أيام النحر، فيجب أن يرمي الجمرات الثلاث في اليوم الرابع. ووقت الرمي هو من طلوع الشمس إلى غروبها.\n
(وَاذْكُرُوا اللَّهَ فِي أَيَّامٍ مَعْدُودَاتٍ فَمَنْ تَعَجَّلَ فِي يَوْمَيْنِ فلا إِثْمَ عَلَيْهِ وَمَنْ تَأَخَّرَ فَلا إِثْمَ عَلَيْهِ لِمَنِ اتَّقَى وَاتَّقُوا اللَّهَ وَاعْلَمُوا أَنَّكُمْ إِلَيْهِ تُحْشَرُون)\n
ثم ينفر الحجاج إلى مكة لطواف الوادع\n
إذا أراد الحاج السفر فيطوف بالبيت بلا سعي وهو واجب, ثم يصلي ركعتي الطواف, ويبدأ الدعاء بالحمد والثناء والصلاة على النبي (صلى الله عليه وسلم) ويختمه بذلك ويقول في الدعاء:\n
(اللهم البيت بيتك والعبد عبدك وابن عبدك وابن أمتك, حملتني على ما سخرت لي من خلقك, وبلغتني بنعمتك حتى أعنتني على قضاء مناسكك, فإن كنت رضيت عني فزدني منك رضا, وإلا فَمُنَّ علي بالقبول و الرضا من محض فضلك يا ذا الفضل العظيم ها أنا منصرف بإذنك غير مستبدل بك ولا بيتك, ولا راغب عنك ولا عن بيتك.\n
اللهم فأصحبني العافية في بدني والعصمة في ديني, وأحسن منقلبي, وارزقني طاعتك ما أبقيتني, واجمع لي خيري الآخرة والدنيا إنك على كل شيء قدير.\n
اللهم ارزقني العود بعد العود, المرة بعد المرة إلى بيتك الحرام, واجعلني من المقبولين عندك يا ذا الجلال والإكرام, اللهم لا تجعله آخر العهد من بيتك الحرام يا أرحم الراحمين)\n
معلومة : في حال أراد الحاج المتمتع أن يقدم سعى الحج  على طواف الإفاضة فبإمكانه ذلك  ويكون بأن ينشئ طواف يعد ان يحرم في الثامن   من ذو الحجة ويسعى بعده سعي الحج.\n
\n\n\n\n\n\n\n\n	    
	</string>
</resources>